# NppTreeSitter

./: .gitignore  BUILD_ZIG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/: mingw-w64-x86_64.cmake
config/: styles.conf
config/grammars/rust/: highlights.scm  rust.xml
include/npp/: PluginInterface.h
include/scintilla/: ILexer.h  Sci_Position.h  Scintilla.h
installer/: NppTreeSitter.nsi  generate_nsi.py
src/: grammar_registry.cpp  grammar_registry.h  plugin_exports.cpp  plugin_exports.def  plugin_main.cpp  plugin_main.h  style_map.cpp  style_map.h  ts_lexer_bridge.cpp  ts_lexer_bridge.h  ts_query_runner.cpp  ts_query_runner.h
